# QtApp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  QtApp.rc  README.md  main.cpp
gtests/: CMakeLists.txt  gTestsClass.cpp  gTestsClass.h  gTestsFeatures.cpp  gtests1.cpp  gtests2.cpp  main.cpp
libMainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
libScreenShot/: CMakeLists.txt  screenshot.cpp  screenshot.h
libStyle/: CMakeLists.txt  style.cpp  style.h  theme.css
